--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": ">=0.21.2",
     "core-js": "^3.6.5",
     "typescript": "^3.4.1",
     "vue": "^2.6.11",
